--- a/splash.css
+++ b/splash.css
@@ -1,6 +1,6 @@
 table{
-    max-width: 100%;
-    max-height: 100%;
+   min-width:100%;
+   height: 400px;
     border: none;
     border-collapse: separate;
     margin: 0%;
@@ -12,7 +12,7 @@ table{
 th, td {
     background: #333;
     padding: 20px;
-    height: 220px;
+    height: 50px;
     width: 800px;
     font-size: 20px;
     margin: 40px;
@@ -31,8 +31,13 @@ th, td:hover{
     box-shadow: 2px 2px 30px rgb(2, 2, 2);
 
 }
-body{
+html body{
     background-color: #080808;
+    height: 95vh;
+    margin: 0%;
+    padding: 0%;
+    overflow-y: hidden;
+     
 }
 .websitename{
     font-family: "Rubik Scribble", system-ui;
